feat: Enhance security and localization support with new language files and .htaccess updates

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -2335,7 +2335,7 @@
       cssEditor.classList.remove('hidden');
       cssRules.disabled = true;
 
-      function debounce(fn, delay) {
+      function debounce(fn, delay = 300) {
         let timeout;
         return (...args) => {
           clearTimeout(timeout);
