--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -1676,7 +1676,7 @@
 
       // ============ UTILS ============
 
-      function debounce(fn, delay) {
+      function debounce(fn, delay = 300) {
         let timeout;
         return (...args) => {
           clearTimeout(timeout);
