--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - fourteenkilobytes</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/admin/favicon-32x32.png">
   <link rel="stylesheet" href="/admin/style.css">
   <script src="/admin/i18n.js"></script>
   <style>
@@ -142,7 +142,7 @@
     </div>
   </div>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="/admin/app.js"></script>
   <script type="module">
     (async function () {
       // Wait for i18n to be ready
