--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - fourteenkilobytes</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="/admin/favicon-32x32.png">
+  <link rel="stylesheet" href="/admin/style.css">
   <script src="/admin/i18n.js"></script>
 </head>
 
@@ -25,13 +25,13 @@
     <header class="header">
       <div class="header-top">
         <!-- Logo with improved accessibility -->
-         <div class="logo-container">
-        <a href="index.html" class="logo" aria-label="14KB Dashboard">
-          <!-- SVG uses currentColor to inherit accent from CSS -->
-          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-            viewBox="0 0 191.000000 191.000000" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
-            <g transform="translate(0.000000,191.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
-              <path d="M406 1889 c-175 -35 -325 -178 -371 -356 -21 -81 -22 -1071 -1 -1149
+        <div class="logo-container">
+          <a href="/admin/index.html" class="logo" aria-label="14KB Dashboard">
+            <!-- SVG uses currentColor to inherit accent from CSS -->
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+              viewBox="0 0 191.000000 191.000000" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
+              <g transform="translate(0.000000,191.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+                <path d="M406 1889 c-175 -35 -325 -178 -371 -356 -21 -81 -22 -1071 -1 -1149
 47 -176 194 -315 374 -353 61 -13 1058 -16 1066 -3 2 4 -22 29 -55 55 -67 54
 -152 157 -220 265 -24 39 -46 71 -49 72 -3 0 -18 -21 -34 -46 -41 -65 -64 -78
 -116 -64 -63 17 -74 3 -65 -82 5 -57 4 -69 -10 -74 -24 -10 -45 15 -45 54 0
@@ -52,29 +52,33 @@
 -31 -33 -41 -71 -41 -14 0 -34 -5 -45 -11 -26 -13 -15 -27 61 -79 30 -21 91
 -70 135 -109 44 -39 85 -71 92 -71 20 0 18 909 -2 1003 -15 73 -58 162 -106
 221 -40 48 -135 112 -207 139 -55 21 -71 22 -587 23 -305 1 -551 -2 -579 -7z" />
-            </g>
-          </svg>
-          <!-- Stacked wordmark for compact branding -->
-          <span class="logo-text" aria-hidden="true">14<br>KB</span>
-        </a></div>
+              </g>
+            </svg>
+            <!-- Stacked wordmark for compact branding -->
+            <span class="logo-text" aria-hidden="true">14<br>KB</span>
+          </a>
+        </div>
         <!-- Semantic nav with improved structure -->
         <nav class="header-nav" aria-label="Main navigation">
-          <a href="index.html" class="nav-icon active" aria-current="page">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <a href="/admin/index.html" class="nav-icon active" aria-current="page">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              aria-hidden="true">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
               <polyline points="9 22 9 12 15 12 15 22" />
             </svg>
             <span data-i18n="nav.overview">Overview</span>
           </a>
-          <a href="editor.html" class="nav-icon">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <a href="/admin/editor.html" class="nav-icon">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              aria-hidden="true">
               <line x1="12" y1="5" x2="12" y2="19" />
               <line x1="5" y1="12" x2="19" y2="12" />
             </svg>
             <span data-i18n="nav.new">New</span>
           </a>
-          <a href="settings.html" class="nav-icon">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <a href="/admin/settings.html" class="nav-icon">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              aria-hidden="true">
               <circle cx="12" cy="12" r="3" />
               <path
                 d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
@@ -82,7 +86,8 @@
             <span data-i18n="nav.settings">Settings</span>
           </a>
           <a href="/" target="_blank" rel="noopener" class="nav-icon external-link">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              aria-hidden="true">
               <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
               <polyline points="15 3 21 3 21 9" />
               <line x1="10" y1="14" x2="21" y2="3" />
@@ -92,7 +97,8 @@
           <!-- Visual separator before logout -->
           <span class="nav-separator" aria-hidden="true"></span>
           <a href="#" id="logout-btn" class="nav-icon logout-icon">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              aria-hidden="true">
               <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
               <polyline points="16 17 21 12 16 7" />
               <line x1="21" y1="12" x2="9" y2="12" />
@@ -119,11 +125,13 @@
               <circle cx="11" cy="11" r="8" />
               <path d="m21 21-4.35-4.35" />
             </svg>
-            <input type="search" id="search-input" autocomplete="off" data-i18n-placeholder="dashboard.search" placeholder="Search..." aria-label="Search posts">
+            <input type="search" id="search-input" autocomplete="off" data-i18n-placeholder="dashboard.search"
+              placeholder="Search..." aria-label="Search posts">
           </div>
           <div class="date-range-picker">
             <div class="date-range-trigger" id="date-range-trigger">
-              <svg class="calendar-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <svg class="calendar-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
                 <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
                 <line x1="16" y1="2" x2="16" y2="6"></line>
                 <line x1="8" y1="2" x2="8" y2="6"></line>
@@ -142,7 +150,8 @@
                   <input type="date" id="date-to" aria-describedby="date-range-label">
                 </div>
               </div>
-              <button type="button" class="btn btn-primary" id="clear-dates" data-i18n="dashboard.dateReset">Reset</button>
+              <button type="button" class="btn btn-primary" id="clear-dates"
+                data-i18n="dashboard.dateReset">Reset</button>
             </div>
           </div>
           <div class="page-size-selector">
@@ -205,8 +214,8 @@
     </div>
   </div>
 
-  <script type="module" src="app.js"></script>
-  <script type="module" src="dashboard.js"></script>
+  <script type="module" src="/admin/app.js"></script>
+  <script type="module" src="/admin/dashboard.js"></script>
 </body>
 
 </html>
