feat: Implement section CSS loading and pattern handling for improved layout management

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -7,6 +7,7 @@
   <title>Editor - fourteenkilobytes</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/admin/favicon-32x32.png">
   <link rel="stylesheet" href="/admin/style.css">
+  <link rel="stylesheet" href="/admin/sections.css">
   <script src="/admin/i18n.js"></script>
 </head>
 
